servicemesh/backendVC.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: demo
spec:
  hosts:
  - 'backend.apps.cluster-18bf.18bf.sandbox1869.opentlc.com'
  gateways:
  - istio-system/wildcard-gateway
  http:
  - name: backend
    route:
    - destination:
        port:
          number: 8080
        host: backend
